--- a/ci-app/public/assets/css/style.css
+++ b/ci-app/public/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Menuleiste*/
 body {
     background-color: #f7f7f7;
     margin: 0;
@@ -92,3 +93,5 @@ td {
 
     background-color: white;
 }
+
+
